# database-builder-libs

./: .gitignore  .lefthook.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yaml  mkdocs_build.yaml  mkdocs_deploy.yaml  unit_test.yaml
contributing/rules/: index.html
docs/: index.md
docs/getting_started/: 01_learn_the_basics.md  02_examples.md
docs/main_modules/: 01_abstract_source.md  02_stores.md  03_embedding_utilities.md  04_zotero_source.md  05_typedb_v2_store.md  06_vector_stores.md  07_qdrant_store.md  08_chunking_strategy.md  13_sync_tracking.md
getting_started/00_getting_started/: index.html
getting_started/01_learn_the_basics/: index.html
getting_started/02_examples/: index.html
introduction/00_introduction/: index.html
introduction/01_faq/: index.html
introduction/02_repository/: index.html
main_modules/00_overview/: index.html
main_modules/01_abstract_source/: index.html
main_modules/02_stores/: index.html
main_modules/03_text_extract_utilities/: index.html
main_modules/04_zotero_source/: index.html
main_modules/05_typedb_v2_store/: index.html
main_modules/06_vector_stores/: index.html
main_modules/07_qdrant_store/: index.html
main_modules/08_chunking_strategy/: index.html
main_modules/09_abstract_chunk_embedder/: index.html
main_modules/10_chunk_embedder_openai/: index.html
main_modules/11_chunk_embedder_transformer/: index.html
main_modules/12_pdf_source/: index.html
src/backend/: config.py
src/backend/models/: abstract_source.py  abstract_store.py  abstract_vector_store.py  chunk.py  node.py
src/backend/sinks/: abstract_sink.py
src/backend/sources/: abstract_source.py  zotero_source.py
src/backend/stores/: abstract_store.py  qdrant_store.py  store.py  typedb_store.py
src/backend/stores/qdrant/: qdrant_store.py
src/backend/stores/typedb_v2/: typedb_v2_store.py
src/backend/utility/: service_state.py
src/backend/utility/embedding/: vectorize_document.py
src/database_builder_libs/models/: abstract_chunk_embedder.py  abstract_chunk_strategy.py  abstract_source.py  abstract_store.py  abstract_vector_store.py  chunk.py  chunk_strategy.py  node.py
src/database_builder_libs/sources/: pdf_source.py  zotero_source.py
src/database_builder_libs/stores/qdrant/: qdrant_store.py
src/database_builder_libs/stores/typedb/: _base.py  _delete.py  _query.py  _read.py  _schema.py  _types.py  _write.py  typedb_store.py
src/database_builder_libs/stores/typedb_v2/: typedb_v2_store.py
src/database_builder_libs/utility/chunk/: n_points_fixed_size.py  n_points_section.py  n_points_sliding_window.py  summary_and_sections.py  summary_n_points.py
src/database_builder_libs/utility/classification/: ner_classify_figures.py
src/database_builder_libs/utility/embed_chunk/: openai_compatible.py  transformer_based.py
src/database_builder_libs/utility/embedding/: vectorize_document.py
src/database_builder_libs/utility/extract/: document_parser_docling.py
src/database_builder_libs/utility/sync/: __init__.py  _base.py  _sqlite.py
tests/backend/: test_framework.py  test_zotero_source.py
tests/backend/sources/zotero/: test_zotero_source.py
tests/backend/stores/: test_qdrant_store.py  test_typedb_store.py
tests/backend/util/embedding/: test_vectorize_document.py
tests/database-builder-libs/sources/zotero/: test_zotero_source.py
tests/database-builder-libs/stores/: test_qdrant_store.py  test_typedb_store.py
tests/database-builder-libs/util/embedding/: test_vectorize_document.py
tests/database_builder-libs/stores/: schema.tql
tests/database_builder_libs/sources/pdf/: test_pdf_source.py
tests/database_builder_libs/sources/zotero/: test_zotero_source.py
tests/database_builder_libs/stores/: schema.tql  test_typedb_store.py
tests/database_builder_libs/stores/typedb/: conftest.py  schema.tql  test_base.py  test_delete.py  test_read.py  test_schema.py  test_write.py
tests/database_builder_libs/util/chunk/: conftest.py  test_chunk_strategies.py  test_n_points_fixed_size.py  test_n_points_section.py  test_n_points_sliding_window.py  test_summary_and_sections.py  test_summary_n_points.py
tests/database_builder_libs/util/embed/: test_embed_openai.py  test_embed_transformers.py
tests/database_builder_libs/util/embed_chunk/: test_embed_transformers.py
tests/database_builder_libs/util/embedding/: test_vectorize_document.py
tests/database_builder_libs/util/extract/: test_document_parser_docling.py
tests/database_builder_libs/utility/sync/: test_sqlite_sync_tracker.py
