[project]
authors = [{name = "Hoog-v", email = "hogeweyv@gmail.com"}]
name = "database-builder"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = ["typedb-driver==2.29.2", "pyzotero"]

[dependency-groups]
dev = [
  "pip",
  "pydantic",
  "pytest-profiling",
  "pytest-xdist",
  "pytest",
  "ruff",
  "ssort",
  "creosote",
  "debugpy",
  "lefthook",
  "mypy",
  "lychee",
  "pandas-stubs",
  "types-requests",
  "types-openpyxl",
  "isort",
  "httpretty"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pixi.workspace]
channels = ["https://fast.prefix.dev/conda-forge",
  "https://repo.prefix.dev/pypdfium2-public",
  "https://repo.prefix.dev/pytorch"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"
# Dotenv is for reading .env files
python-dotenv = ">=1.1.0"
# Async network lib
anyio = ">=4.9.0"
# Web framework
fastapi = ">=0.115.12"
# Linguistic data manipulation
spacy = ">=3.8.6"
loguru = ">=0.7.3,<0.8"
compilers = ">=1.9.0"
pkg-config = ">=0.29.2"
# torch
pytorch = ">=2.2.2"
torchvision = ">=0.17"

[tool.pixi.pypi-dependencies]
database_builder = { path = ".", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
testpaths = ["tests/backend"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning"
]

[tool.mypy]
allow_redefinition = true
disable_error_code = [
    "call-arg",        # unexpected keyword arguments
    "import-untyped",  # missing stubs like requests
    "import-not-found",
    "call-overload",
    "arg-type",
    "misc",
]
pretty = true
exclude = [
    "^\\.pixi/",  # ignore the .pixi folder at repo root
]

[tool.ruff.lint]
select = ["B024", "E4", "E7", "E9", "F", "C4", "PT"]

[tool.ruff]
exclude = [".pixi", "tests"]

[tool.pixi.tasks]
lint = "ruff check"
typecheck = "mypy ."
test = "pytest -q"

[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"

# Platform-specific deps
[tool.pixi.target.linux-64.dependencies]
python-devtools = ">=0.12.2"       


[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
development = { features = ["dev"], solve-group = "default" }
