[project]
authors = [
  { name = "Hoog-v", email = "hogeweyv@gmail.com" },
  { name = "Simon Dingemans", email = "simon.dingemans@gmail.com" },
]
name = "database_builder_libs"
requires-python = ">= 3.11, <=3.12"
version = "0.1.0"
dependencies = [
  "typedb-driver>=3.8.0",
  "fastapi>=0.128.0",
  "pyzotero>=1.7.6",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "anyio>=4.12.1",
  "spacy>=3.8.11",
  "loguru>=0.7.3",
  "torch",
  "torchvision",
  "testcontainers",
  "qdrant-client",
  "docling>=2.73.0,<3",
  "mkdocs-material",
  "mkdocs",
  "mkdocstrings[python]>=0.18",
  "pypdf>=4.0.0",
  "openai>=2.29.0,<3",
  "transformers>=4.57.6,<5",
]

[dependency-groups]
dev = [
  "lefthook",
  "debugpy>=1.8.19",
  "httpretty>=1.1.4",
  "pandas-stubs>=2.3.3.260113",
  "pytest>=9.0.2",
  "ruff>=0.14.11",
  "ty>=0.0.12",
  "types-openpyxl>=3.1.5.20250919",
  "types-requests>=2.32.4.20260107",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/database_builder_libs"]

[tool.pixi.workspace]
channels = [
  "https://fast.prefix.dev/conda-forge",
  "https://repo.prefix.dev/pypdfium2-public",
  "https://repo.prefix.dev/pytorch",
]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
# Dotenv is for reading .env files
compilers = ">=1.9.0"
pkg-config = ">=0.29.2"
pip = "*"

[tool.pixi.pypi-dependencies]
database_builder_libs = { path = ".", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
testpaths = ["tests/database_builder_libs"]
filterwarnings = ["ignore:datetime.datetime.utcnow.*:DeprecationWarning"]

[tool.ty.src]
include = ["src"]
exclude = ["tests/", ".pixi/"]

[tool.ruff.lint]
select = ["B024", "E4", "E7", "E9", "E301", "F", "C4", "PT"]

[tool.ruff]
exclude = [".pixi", "tests"]

[tool.pixi.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "ty check ."
test = "pytest -s"
app = "python -m src.backend.main"
docs = "mkdocs serve -a 0.0.0.0:9001"
docs-build = "mkdocs build"

[tool.pixi.activation.env]
PYTHONNOUSERSITE = "1"
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"

# Platform-specific deps
[tool.pixi.target.linux-64.dependencies]
python-devtools = ">=0.12.2"


[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
development = { features = ["dev"], solve-group = "default" }
